--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1,3 +1,11 @@
 body {
   margin: 0;
 }
+
+.risolab {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f0f0f0;
+}
