--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -9,3 +9,14 @@ body {
   height: 100vh;
   background-color: #f0f0f0;
 }
+
+.refresh-sketch {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 8px;
+  padding: 8px 12px;
+  border-radius: 0.2rem;
+  border: 1px solid blue;
+  background-color: #f0f0f0;
+}
