--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -17,6 +17,6 @@ body {
   margin-bottom: 8px;
   padding: 8px 12px;
   border-radius: 0.2rem;
-  border: 1px solid blue;
+  border: 2px solid black;
   background-color: #f0f0f0;
 }
